LU-113: add .spec file for RHEL6 split packages
Add .spec file from RHEL6 to handle multiple split RPM packages to
avoid conflicts while installing the resulting e2fsprogs RPMs.

Fix warnings that result from building on a RHEL6 system.
Also resolve LU 44 build problem when --disable-lfsck is given.

Signed-off-by: Andreas Dilger <adilger@whamcloud.com>
Change-Id: Ib6b7e6789aed75ab2afd12e216605552498613c7

--- a/patches/ChangeLog
+++ b/patches/ChangeLog
@@ -1,5 +1,5 @@
-2011-01-20	Whamcloud, Inc.
-	* version 1.41.14.wc1
+tbd		Whamcloud, Inc.
+	* version 1.42.0.wc1
 	     
 Severity   : enhancement
 Description: update to latest upstream e2fsprogs release
