--- a/patches/ChangeLog
+++ b/patches/ChangeLog
@@ -1,6 +1,33 @@
 2011-09-01	Whamcloud, Inc.
 	* version 1.41.90.wc4
 
+Severity   : major
+Description: LU-934 External xattr inode support
+Details    : Copy EA from external inode, and fix the size checking in
+	     check_ea_in_inode().
+
+Severity   : minor
+Description: LU-997 Enforce a max nested link count
+Details    : Define EXT2FS_MAX_NESTED_LINKS as 8, and check the link count
+	     to make sure we don't exceed it in ext2fs_find_block_device()
+	     and follow_link().  This fixes a potential infinite loop in
+	     ext2fs_find_block_device() if there are symbolic loop links in
+	     the device directory.
+
+Severity   : minor
+Description: LU-752 Compare EA name correctly
+Details    : In e2fsck_lfsck_find_ea(), it compares EA name by calling
+	     strncmp on the EA name pairs directly, without length checking.
+	     This is wrong because the passed in EA entry could be an empty
+	     entry with 0 EA name length, or it's name could be a sub-string
+	     of the comparing one.
+
+Severity   : minor
+Description: LU-968 Fix directory check
+Details    : filelist_dblist_iterate_cb() checks whether a scanned inode is
+	     a directory, but it didn't mask of the dir data size before
+	     comparing the file type.
+
 Severity   : enhancement
 Description: LU-647 Update for 2.1.0 build, CentOS 6.0
 Details    : liblustreapi.h includes libcfs/posix/posix-types.h now, the
